--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
@@ -46,7 +46,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1 style="text-align:center;">Selamat Datang, Di dunia Dongeng</h1>
+    <h1 style="text-align:center;">Mari Menjaga Kelestarian Alam</h1>
     
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -55,13 +55,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="bersih1.png" class="d-block w-100" alt="...">
+      <img src="11.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="bersih 2.jpg" class="d-block w-100" alt="...">
+      <img src="10.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="bersih3.jpg" class="d-block w-100" alt="...">
+      <img src="bersih5.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
