--- a/couses.html
+++ b/couses.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="couses.html">Couses</a>
+          <a class="nav-link" href="couses.html">Causes</a>
         </li>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -46,7 +46,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1 style="text-align:center;">Mari Menjaga Kelestarian Alam</h1>
+    <h1 style="text-align:center;">Penyebab Kerusakan Lingkungan</h1>
     
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -55,13 +55,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="11.png" class="d-block w-100" alt="...">
+      <img src="alam1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="10.jpg" class="d-block w-100" alt="...">
+      <img src="alam2.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="bersih5.jpg" class="d-block w-100" alt="...">
+      <img src="alam3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -89,3 +89,4 @@
 
   </body>
 </html>
+
